@@ -6,7 +6,7 @@
 // for more info look at: www.php.net/pdo
 
 <?php if ($db_driver == 'mysql'): ?>
-define('DB_DSN', 'mysql:dbname=<?php echo $db_name; ?>;host=<?php echo $db_host; ?>');
+define('DB_DSN', 'mysql:dbname=<?php echo $db_name; ?>;host=<?php echo $db_host; ?>;port=<?php echo $db_port ?>;');
 <?php else: ?>
 define('DB_DSN', 'sqlite:<?php echo $db_name; ?>');
 <?php endif; ?>
